Remove full stop from homepage title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: A collection of shapes made with SVG.
+title: A collection of shapes made with SVG
 ---
 
 <ul class="posts">
