--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: A collection of shapes made with SVG
 <ul class="posts">
 	{% for post in paginator.posts %}
 		<li>
-			<a href="{{site.url}}{{ post.url }}">
-				<img class="thumbnail" src="{{site.url}}/images/shapes/{{ post.name }}.svg" alt="{{ post.title }}" id="{{ post.name }}">
+			<a href="{{site.baseurl}}{{ post.url }}">
+				<img class="thumbnail" src="{{site.baseurl}}/images/shapes/{{ post.name }}.svg" alt="{{ post.title }}" id="{{ post.name }}">
 				<!-- Directional aware hover -->
 				<div><span>{{ post.title }}</span></div>
 			</a>
@@ -26,4 +26,4 @@ title: A collection of shapes made with SVG
 
 {% include home-page-pagination.html %}
 
-<script src='{{site.url}}/javascript/home.js'></script>
+<script src='{{site.baseurl}}/javascript/home.js'></script>
